--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,10 @@
 			<artifactId>jackson-dataformat-xml</artifactId>
 			<version>2.12.4</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
